working on getting ion phaser to work with phaser example game

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -13,6 +13,10 @@
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
+
+
     <title>React App</title>
   </head>
   <body>
@@ -20,8 +24,9 @@
     <div id="root"></div>
 
   </body>
-</html> -->
-<!DOCTYPE html>
+</html>
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
@@ -79,5 +84,5 @@
     </script>
 
 </body>
-</html>
+</html> -->
 
