--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="80s, synthwave, retro, defender, space, game, videogame, blade runner, phaser 3, asteroids, react"
+      content="80s, synthwave, retro, defender, space, game, videogame, blade runner, phaser 3, asteroids, react, Sean Hetzel, flatiron school"
     />
     <link
       rel="apple-touch-icon"
