possibly fixed error

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="80s inspired space shooter game. Do you have what it takes?"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/star-runner-screenshot-2.PNG">
+    <meta property="og:image" content="%PUBLIC_URL%/star-runner-screenshot-2.PNG"/>
     <meta
       name="keywords"
       content="80s, synthwave, retro, defender, space, game, videogame, blade runner, phaser 3, asteroids, react, Sean Hetzel, flatiron school"
