replace social preview image

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:name" content="STAR RUNNER" />
     <meta
-      name="description"
+      property="og:description"
       content="80s inspired space shooter game. Do you have what it takes?"
     />
-    <meta property="og:image" content="%PUBLIC_URL%/star-runner-screenshot-2.PNG"/>
+    <meta property="og:image" content="./star-runner-screenshot-3.png" />
     <meta
       name="keywords"
       content="80s, synthwave, retro, defender, space, game, videogame, blade runner, phaser 3, asteroids, react, Sean Hetzel, flatiron school"
@@ -17,21 +18,21 @@
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
+      href="./apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
+      href="./favicon-16x16.png"
     />
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.11.0/dist/phaser.js"></script>
     <title>STAR RUNNER</title>
