update description meta

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:name" content="STAR RUNNER" />
     <meta
       property="og:description"
-      content="80s inspired space shooter game. Do you have what it takes?"
+      content="Retro 80's inspired space shooter game. Do you have what it takes?"
     />
     <meta property="og:image" content="./star-runner-screenshot-3.png" />
     <meta
