use remotely hosted image for social preview image

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,10 @@
       property="og:description"
       content="Retro 80's inspired space shooter game. Do you have what it takes?"
     />
-    <meta property="og:image" content="./star-runner-screenshot-3.png" />
+    <meta
+      property="og:image"
+      content="https://github.com/sean-hetzel/star-runner/raw/gh-pages/public/star-runner-screenshot-3.png"
+    />
     <meta
       name="keywords"
       content="80s, synthwave, retro, defender, space, game, videogame, blade runner, phaser 3, asteroids, react, Sean Hetzel, flatiron school"
