fix correct meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta property="og:name" content="STAR RUNNER" />
+    <meta property="og:title" content="STAR RUNNER" />
     <meta
       property="og:description"
       content="Retro 80's inspired space shooter game. Do you have what it takes?"
